RESOLVED FIXED 46896
Spatial Navigation: select element does not release focus with Spatial Navigation
https://bugs.webkit.org/show_bug.cgi?id=46896
Summary Spatial Navigation: select element does not release focus with Spatial Naviga...
Yael
Reported 2010-09-30 06:47:29 PDT
When using Spatial Navigation, once a select element is focused, you cannot use arrow keys to navigate out of the select element. That is because select element currently uses the arrow keys to change the selected element.
Attachments
Patch (1.93 KB, patch)
2010-09-30 07:05 PDT, Yael
tonikitoo: review-
Patch (10.89 KB, patch)
2010-10-01 11:49 PDT, Yael
no flags
Yael
Comment 1 2010-09-30 07:05:07 PDT
Created attachment 69333 [details] Patch Change the behavior of select element so it does not change selection, if Spatial Navigation is on.
Antonio Gomes
Comment 2 2010-10-01 08:58:41 PDT
Comment on attachment 69333 [details] Patch r-, specially for the lack of tests. Chang is aware about how we've been testing spatial navigation behavior. 1) Misses tests 2) Would it affect dropdown and menulists? both are <select> 3) We have to define how spatial navigation traverses <option> elements, in <select>. As I could understand, your patch just makes it possible to navigate away from selects (which is a first step, I agree)
Yael
Comment 3 2010-10-01 09:50:33 PDT
(In reply to comment #2) > (From update of attachment 69333 [details]) > r-, specially for the lack of tests. Chang is aware about how we've been testing spatial navigation behavior. > > 1) Misses tests > 2) Would it affect dropdown and menulists? both are <select> > 3) We have to define how spatial navigation traverses <option> elements, in <select>. > > As I could understand, your patch just makes it possible to navigate away from selects (which is a first step, I agree) Thanks for the review. I was operating from the point of view that Spatial Navigation is useful only in mobile devices, and as such, the flag ENABLE_NO_LISTBOX_RENDERING would be turned on. Do you see a usecase for Spatial Navigation not in a mobile device?
Yael
Comment 4 2010-10-01 11:49:03 PDT
Created attachment 69493 [details] Patch Added test as requested in comment #2. Added a comment that this patch is only addressing the case where the flag NO_LISTBOX_RENDERING is turned on. In the future, if needed, we can add support for the case that the flag is turned off.
Antonio Gomes
Comment 5 2010-10-04 06:36:39 PDT
> I was operating from the point of view that Spatial Navigation is useful only in mobile devices, and as such, the flag ENABLE_NO_LISTBOX_RENDERING would be turned on. Do you see a usecase for Spatial Navigation not in a mobile device? We should not be limiting Spatial navigation to mobile environments, although it is probably their primary use case, yes. Opera has a great implementation working on their Desktop browser version as you can see in http://www.opera.com/browser/tutorials/nomouse/#nav . It is enabled by default, and makes almost 100% of the focusable/clickable elements in the page accessible through the keyboard. However they made work under a modifier key: SHIFT+ARROW. I want to make possible to have something as good as they have for both Desktop and mobile browser versions.
Kenneth Rohde Christiansen
Comment 6 2010-10-04 06:42:55 PDT
And this is quite useful for TV's!
Antonio Gomes
Comment 7 2010-10-04 07:02:07 PDT
Comment on attachment 69493 [details] Patch Good first step, Yael. r=me Could you please file follow up bugs about making it possible Spatial Navigation to properly handle <option>'s elements? Here, we are basically making it possible to handle the ENABLE_NO_LISTBOX_RENDERING case, but not the general case for desktop.
Yael
Comment 8 2010-10-04 10:04:01 PDT
(In reply to comment #7) > (From update of attachment 69493 [details]) > Good first step, Yael. r=me > > Could you please file follow up bugs about making it possible Spatial Navigation to properly handle <option>'s elements? Here, we are basically making it possible to handle the ENABLE_NO_LISTBOX_RENDERING case, but not the general case for desktop. Filed https://bugs.webkit.org/show_bug.cgi?id=47094
WebKit Commit Bot
Comment 9 2010-10-04 21:29:05 PDT
Comment on attachment 69493 [details] Patch Clearing flags on attachment: 69493 Committed r69068: <http://trac.webkit.org/changeset/69068>
WebKit Commit Bot
Comment 10 2010-10-04 21:29:11 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 11 2010-10-05 07:52:34 PDT
Revision r69068 cherry-picked into qtwebkit-2.1 with commit cb60b0d <http://gitorious.org/webkit/qtwebkit/commit/cb60b0d>
Note You need to log in before you can comment on or make changes to this bug.